set03/problem08_compile_errors.txt
Compilation started at 10/30/2023, 10:30:08 PM
c:\Users\girje\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-YashShukla070804\set03\problem08.c: In function 'main':
c:\Users\girje\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-YashShukla070804\set03\problem08.c:4:5: error: unknown type name 'Polygon'
     Polygon poly;
     ^~~~~~~
Compilation started at 10/31/2023, 11:14:33 AM
Compilation finished at 10/31/2023, 11:14:33 AM
Compilation started at 10/31/2023, 11:15:20 AM
Compilation finished at 10/31/2023, 11:15:20 AM
